# bamboo-elf

./: .gitignore  CLAUDE.md  Cargo.toml  HANDOFF_2026-03-16_13-08-48.md  PLAN.md  README.md  config.example.toml
crates/bamboo-core/: Cargo.toml
crates/bamboo-core/src/: bus.rs  config.rs  enums.rs  error.rs  identifiers.rs  lib.rs  messages.rs  types.rs  venue.rs
crates/bamboo-runtime/: Cargo.toml
crates/bamboo-runtime/src/: bus.rs  lib.rs  mock_agents.rs  persistence.rs  safe_mode.rs  shutdown.rs
crates/bamboo-runtime/src/agents/: cycle_manager.rs  execution.rs  mod.rs  portfolio.rs  research.rs  risk.rs  strategy.rs
crates/bamboo-runtime/src/feeds/: binance.rs  mod.rs  news.rs
crates/bamboo-runtime/src/venues/: binance_live.rs  mod.rs  paper.rs
crates/bamboo-runtime/tests/: pipeline_integration.rs
crates/bamboo-terminal/: Cargo.toml
crates/bamboo-terminal/src/: app.rs  main.rs  onboard.rs  ui.rs  widgets.rs
docs/superpowers/specs/: 2026-03-25-spec1-foundation-living-tui-design.md  2026-03-25-spec2-trading-intelligence-design.md  2026-03-25-spec3-execution-live-design.md
