[package]
name = "bamboo-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bamboo-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
rand = { version = "0.8", features = ["small_rng"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
